--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -20,10 +20,20 @@
 <!-- See storage config details at http://source.android.com/tech/storage/ -->
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- internal emulated storage -->
-    <storage
-        android:storageDescription="@string/storage_internal"
-        android:primary="true"
-        android:emulated="true"
-        android:mtpReserve="100" />
+   <storage android:mountPoint="/storage/sdcard0"
+             android:storageDescription="@string/storage_internal"
+             android:primary="true"
+             android:emulated="true"
+             android:mtpReserve="100" />
+
+    <storage android:mountPoint="/storage/sdcard1"
+             android:storageDescription="@string/storage_sd_card"
+             android:primary="false"
+             android:removable="true"
+             android:allowMassStorage="true" />
+    <storage 
+        android:storageDescription="@string/storage_usb"
+        android:mountPoint="/storage/usbdisk0"
+        android:primary="false"
+        android:removable="true" />
 </StorageList>
